Added the header element for the background pattern and added the app title.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <title>Frontend Mentor | IP Address Tracker</title>
 </head>
 <body>
-
-  IP Address Tracker
+  <header class="banner">
+    <h1 class="title">IP Address Tracker</h1>
+  </header>
 
   Search for any IP address or domain
 
