Added the markup for the search form and styled it.

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 <body>
   <header class="banner">
     <h1 class="title">IP Address Tracker</h1>
+    <form class="ip-form">
+      <input type="text" class="ip-input" placeholder="Search for any IP address or domain">
+      <button class="search-btn"><img src="./images/icon-arrow.svg" alt="" class="arrow"></button>
+    </form>
   </header>
-
-  Search for any IP address or domain
 
   IP Address
   Location
