Added the markup for the ip information section.

--- a/index.html
+++ b/index.html
@@ -14,13 +14,26 @@
       <input type="text" class="ip-input" placeholder="Search for any IP address or domain">
       <button class="search-btn"><img src="./images/icon-arrow.svg" alt="" class="arrow"></button>
     </form>
-  </header>
 
-  IP Address
-  Location
-  Timezone
-    UTC <!-- add offset value dynamically using the API -->
-  ISP
+    <section class="ip-info">
+      <div class="wrapper">
+        <h2 class="info-title">IP Address</h2>
+        <p class="info-text ip-address">192.212.174.101</p>
+      </div>
+      <div class="wrapper">
+        <h2 class="info-title">Location</h2>
+        <p class="info-text location">Brooklyn NY, 10001</p>
+      </div>
+      <div class="wrapper">
+        <h2 class="info-title">Timezone</h2>
+        <p class="info-text timezone">UTC <span class="timeone-value">-5:00</span></p>
+      </div>
+      <div class="wrapper">
+        <h2 class="info-title">ISP</h2>
+        <p class="info-text isp">SpaceX Starlink</p>
+      </div>
+    </section>
+  </header>
   
   <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
