Moved the comma in the location text to be in the appropriate place for the default text.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
       <div class="wrapper">
         <h2 class="info-title">Location</h2>
-        <p class="info-text location">Brooklyn NY, 10001</p>
+        <p class="info-text location">Brooklyn, NY 10001</p>
       </div>
       <div class="wrapper">
         <h2 class="info-title">Timezone</h2>
