--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     Coded by <a href="#">Your Name Here</a>.
   </div> -->
 
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="./js/main.js"></script>
 </body>
 </html>
