Fixed a typo for the timezone value span so the information from the api displays correctly.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
       <div class="wrapper">
         <h2 class="info-title">Timezone</h2>
-        <p class="info-text timezone">UTC <span class="timeone-value">-5:00</span></p>
+        <p class="info-text timezone">UTC <span class="timezone-value">-5:00</span></p>
       </div>
       <div class="wrapper">
         <h2 class="info-title">ISP</h2>
