Added a role to the body to try to fix the fem accessibility errors.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./css/style.css">
   <title>Frontend Mentor | IP Address Tracker</title>
 </head>
-<body>
+<body role="main">
   <header class="banner">
     <h1 class="title">IP Address Tracker</h1>
     <form class="ip-form">
